[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/LevelSwitcher.gd" type="Script" id=1]
[ext_resource path="res://Utilities/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sounds/you_lose.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scenes/SceenTransitionRect.tscn" type="PackedScene" id=4]
[ext_resource path="res://Utilities/m3x6.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="LevelSwitcher" type="Node"]
script = ExtResource( 1 )

[node name="Timer_EndRound" type="Timer" parent="."]

[node name="Timer_Fade" type="Timer" parent="."]

[node name="EndRound_Screen" type="Node2D" parent="."]

[node name="Label" type="Label" parent="EndRound_Screen"]
margin_top = 65.0
margin_right = 479.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Congratulations! You live to fight another round!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer_StartRound" type="Timer" parent="."]

[node name="StartRound_Screen" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="StartRound_Screen"]
margin_top = 65.0
margin_right = 479.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Round 1 Starting..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenTransitionRect" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Timer_Loss" type="Timer" parent="."]

[node name="Loss_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "Effects"

[node name="Loss_Text" type="Label" parent="."]
visible = false
margin_left = 210.0
margin_top = 65.0
margin_right = 264.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.807843, 0, 0, 1 )
text = "You have died!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer_EndRound" to="." method="_on_Timer_EndRound_timeout"]
[connection signal="timeout" from="Timer_Fade" to="." method="_on_Timer_Fade_timeout"]
[connection signal="timeout" from="Timer_StartRound" to="." method="_on_Timer_StartRound_timeout"]
[connection signal="timeout" from="Timer_Loss" to="." method="_on_Timer_Loss_timeout"]
